# KrakenClip

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md
benches/: parsing_benchmark.rs
examples/: basic_usage.rs
src/: abundance_matrix.rs  alternative_krk_parser.rs  biom.rs  cli.rs  generate_test_data.rs  krk_parser.rs  lib.rs  logkrk_parser.rs  main.rs  sequence_processor.rs  taxon_query.rs
tests/: integration_tests.rs
