[package]
name = "krakenclip"
version = "0.2.0"
edition = "2025"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
rayon = "1.5"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.5"
fast-float = "0.2"
memory-stats = "1.0.0"
colored = "2.0"
rand = "0.8.5"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing_benchmark"
harness = false