[package]
name = "krakenclip"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
rayon = "1.5"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.5"
fast-float = "0.2"
memory-stats = "1.0.0"
colored = "2.0"
rand = "0.8.5"
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing_benchmark"
harness = false

# Optimizations for release mode - maximum compression and performance
[profile.release]
opt-level = 3                # Maximum optimization level
lto = true                   # Link-time optimization
codegen-units = 1            # Better cross-module optimization
panic = 'abort'              # Removes panic recovery code
strip = true                 # Removes debug information
debug = false                # No debug information
incremental = false          # Disables incremental compilation to optimize size
overflow-checks = false      # Disables overflow checks for performance